fixed navbar flex-wrap in md screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -829,6 +829,7 @@ h6 {
 @media screen and (min-width: 768px) {
   .nav {
     padding: 2rem;
+    flex-wrap: nowrap;
   }
 
   .nav__toggler {
